# DevMate

./: .gitignore  README.md  config.toml  pyproject.toml
.knowledge/docs/: internal_fastapi_guidelines.md
.knowledge/vector_db/: index.faiss  index.pkl
docker/: Dockerfile  docker-compose.yml
src/: __init__.py  cli.py  config.py  logging_config.py
src/agent/: __init__.py  agent.py
src/agent/prompts/: PromptManager.py  __init__.py  constants.py
src/agent/prompts/template/: codex.md  qwen_code.md  test.txt
src/agent/skills/: __init__.py  models.py  skill_manager.py
src/agent/tool/: file_tools.py  rag_tools.py  skills_tools.py  tool_management.py
src/mcp_server/: server.py
src/rag/: embedding.py  ingest.py  retriever.py
src/web/: __init__.py  app.py
src/web/templates/: index.html
