[project]
name = "devmate"
version = "0.1.0"
description = "AI 驱动的编程助手 - DevMate"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.4.12",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langsmith>=0.7.22",
    "mcp>=1.26.0",
    "python-multipart>=0.0.22",
    "ruff>=0.15.8",
    "toml>=0.10.2",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
devmate = "src.cli:main"
